--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Innario Avventista</string>
+    <string name="app_name">Innario Avventista Italiano</string>
     <string name="himnos_list">Lista degli inni</string>
     <string name="about_string">A cura di...</string>
     <string name="minus_size_string">Riduci testo</string>
